# Rzain

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  START_TESTING.sh  TESTING_GUIDE.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py  health.py
backend/app/api/v1/: ai.py  analytics.py  audits.py  auth.py  controls.py  dashboard.py  evidence.py  export.py  risks.py  router.py  standards.py  users.py
backend/app/core/: exceptions.py  middleware.py  security.py
backend/app/models/: __init__.py  audit.py  control.py  evidence.py  nonconformity.py  risk.py  standard.py  user.py
backend/app/schemas/: audit.py  auth.py  control.py  evidence.py  risk.py  standard.py  user.py
backend/app/seeders/: __init__.py  create_admin.py  nca_cscc.py  nca_ecc.py  ndmo.py  run_seeders.py  sdaia.py
backend/app/services/: ai_service.py  auth_service.py  export_service.py  notification_service.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_risks.py  test_seeders.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ENHANCEMENTS.md  STANDARDS.md  USER_GUIDE.md
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  dashboard.ts  risks.ts
frontend/src/hooks/: useDirection.ts
frontend/src/pages/: AuditPage.tsx  CompliancePage.tsx  DashboardPage.tsx  LoginPage.tsx  (+1 more)
(+15 files in other folders)
